# index-microbench

./: .gitignore  CMakeLists.txt  README.md  all_workloads_large.inp  all_workloads_large_10mio.inp  all_workloads_large_50mio.inp  all_workloads_small.inp  gen_workload.py  index.h  indexkey.h  makefile  microbench.h  workload.cpp  workload_config.inp  workload_string.cpp  workload_test_config.inp  workload_test_ordered_config.inp
ART/: hybridART.h
workload_spec/: a_zipf_hashed_50M  a_zipf_int_10M  a_zipf_ordered_10M  a_zipf_ordered_50M  b_zipf_hashed_10M  b_zipf_int_50M  b_zipf_ordered_10M  b_zipf_ordered_50M  c_zipf_hashed_10M  c_zipf_hashed_50M  c_zipf_ordered_10M  c_zipf_ordered_50M  d_zipf_hashed_10M  d_zipf_hashed_50M  d_zipf_int_100M  d_zipf_ordered_10M  d_zipf_ordered_50M  e_zipf_hashed_50M  e_zipf_int_10M  e_zipf_ordered_10M  e_zipf_ordered_50M  f_zipf_int_100M  f_zipf_int_10M  f_zipf_int_50M  f_zipf_ordered_10M  f_zipf_ordered_50M  workload_test_ordered
